objects/ccrz__E_MenuI18N__c.object
<CustomObject>
    <description>Locale-specific version of menu, used for localizing the display name of menu.</description>
    <fields>
        <fullName>ccrz__DisplayName__c</fullName>
        <description>Display Name in the language referenced by the locale.</description>
        <label>Display Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Language__c</fullName>
        <description>Locale/Language that is being defined by this entry.</description>
        <label>Language</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__Locale__c</fullName>
        <description>Locale that is being defined by this entry. This field is used for displaying the Locale/Language drop-down, but not used to store any value for this record. The Language__c field is used to store the selected value.</description>
        <label>Locale</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__MenuI18NId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>External ID field for this menu record, helpful in data loading.</description>
        <externalId>true</externalId>
        <label>Menu I18N Ext Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__Menu__c</fullName>
        <description>Reference to the CC Menu record being localized.</description>
        <label>CC Menu</label>
        <referenceTo>ccrz__E_Menu__c</referenceTo>
        <relationshipLabel>CC Menu I18N</relationshipLabel>
        <relationshipName>Menu_I18N</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>CC Menu I18N</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Menu I18N AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Menu I18N</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>